<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
		<LinearLayout
			android:id="@+id/cocktailHistoryListView"
		    android:baselineAligned="false"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
       		android:orientation="horizontal" >
       		
			<ListView
		        android:id="@+id/cocktailHistoryList"
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1" />    	    
	
			<View
			         android:layout_width="1dp"
			         android:layout_height="fill_parent"
			         android:background="@android:color/black"
			         android:layout_alignParentStart="true" />
			
			<RelativeLayout
		        android:id="@+id/cocktailHistoryDetails"
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1" 
		        android:paddingTop="@dimen/activity_horizontal_margin"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
			    android:paddingRight="@dimen/activity_horizontal_margin"
		        android:paddingBottom="@dimen/activity_horizontal_margin"
		        >

			    <ImageView
			         android:id="@+id/cocktailHistoryLogo"
			         android:layout_width="256dp"
			         android:layout_height="256dp"
			         android:layout_centerHorizontal="true"
			         android:contentDescription="@string/logo_of_the_cocktail"
			         android:src="@drawable/vodka_martini" />
			    		        
			    <TextView
			         android:id="@+id/cocktailHistoryName"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_below="@+id/cocktailHistoryLogo"
			         android:text="@string/name"
			         android:textAppearance="?android:attr/textAppearanceLarge" />
			
			     <TextView
			         android:id="@+id/cocktailHistoryDescription"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_below="@+id/cocktailHistoryName"
			         android:text="@string/cocktail_description" />
			     
			     <TextView
			         android:id="@+id/cocktailHistoryId"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_below="@+id/cocktailHistoryDescription"
			         android:text="@string/cocktailid" />
			     
			     <LinearLayout
			        style="@android:style/ButtonBar"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_alignParentBottom="true"
			        android:orientation="horizontal" >
			
			        <Button
			            android:layout_width="0dp"
			            android:layout_height="fill_parent"
			            android:layout_gravity="center_vertical"
			            android:layout_weight="1"
			            android:onClick="setCocktailUnfinished"
			            android:text="@string/cocktail_finished" />
			    </LinearLayout>
			     
		    </RelativeLayout>
		
    	</LinearLayout>

        <ViewStub
            android:id="@+id/emptyHistory"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout="@layout/empty" />
    </FrameLayout>

</LinearLayout>
